deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: devops-app
        image: vyshnavidanda336/devops-app:v3
        ports:
        - containerPort: 5000
