service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
