ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-app-ingress

spec:
  rules:
  - host: devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-app-service
            port:
              number: 80
